--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">KotlinWithRetrofit</string>
     <string name="add">Add</string>
     <string name="username">Username</string>
+    <string name="check_internet_connection">Kindly, Check your internet connection!</string>
+    <string name="ok">OK</string>
+    <string name="add_item">Add Item</string>
+    <string name="role">Role</string>
 </resources>
