--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="ok">OK</string>
     <string name="add_item">Add Item</string>
     <string name="role">Role</string>
+    <string name="user_added">User Added</string>
+    <string name="user_deleted">User deleted</string>
 </resources>
